# hermes_spani

./: .cruft.json  .gitignore  .gitignore.rej  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codestyle.yml  testing.yml
docs/: api.rst  conf.py  index.rst
docs/cmad/: calibration_plan.rst  measurement_algos.rst  overview_and_bkg.rst  related_docs.rst
docs/dev-guide/: config.rst  docs.rst  maintainer_workflow.rst
docs/user-guide/: customization.rst  data.rst
hermes_spani/: __init__.py
hermes_spani/calibration/: calibration.py
hermes_spani/data/calibration/: README.rst
hermes_spani/tests/: test_calibration.py  test_file_tools.py
